--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "eslint-server",
+	"name": "eslint-server-test",
 	"version": "1.3.0",
 	"author": "Microsoft Corporation",
 	"license": "MIT",
@@ -14,9 +14,14 @@
 		"node": "*"
 	},
 	"dependencies": {
-		"vscode-uri": "^1.0.1",
-		"vscode-languageserver": "^3.5.0"
+		"vscode-languageserver": "^3.5.0",
+		"vscode-uri": "^1.0.1"
 	},
-	"scripts": {
+	"prepublishOnly": "tsc",
+	"scripts": {},
+	"main": "./out/server.js",
+	"types": "./src/server.ts",
+	"devDependencies": {
+		"typescript": "^2.6.2"
 	}
 }
